--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 220 13% 96%; /* Light Grey */
+    --background: 231 48% 95%; /* Very Light Blue */
     --foreground: 224 71.4% 4.1%; /* Almost Black */
     
     --card: 0 0% 100%;
@@ -16,14 +16,14 @@
     --primary: 231 48% 48%; /* Dark Blue #3F51B5 */
     --primary-foreground: 210 20% 98%; /* Light color for text on blue */
     
-    --secondary: 220 14.3% 90%; /* Mid Grey */
+    --secondary: 231 48% 90%; /* Slightly darker light blue */
     --secondary-foreground: 220.9 39.3% 11%;
     
     --muted: 220 14.3% 90%; /* Mid Grey */
     --muted-foreground: 220 8.9% 46.1%;
     
-    --accent: 0 63% 44%; /* Red #DC2626 */
-    --accent-foreground: 210 20% 98%; /* Light color for text on red */
+    --accent: 45 100% 52%; /* Amber #FFC107 */
+    --accent-foreground: 24 9.8% 10%; /* Dark color for text on Amber */
     
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
@@ -63,8 +63,8 @@
     --secondary-foreground: 210 40% 98%;
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --accent: 45 100% 52%;
+    --accent-foreground: 24 9.8% 10%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 32.6% 17.5%;
